--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/style.css
@@ -1,8 +1,41 @@
+body {
+    font-size: 16px;
+}
+
 h1 {
+    font-family: sans-serif;
     font-size: 65px;
     color: #e66814;
+    text-decoration: underline;
+    text-align: center;
 }
 
 .favorite-color{
     background-color: #FFF8DC;
+}
+
+p {
+    font-size: 3rem;
+    font-weight: 600;
+    font-style: italic;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+    line-height: 2.5rem;
+    list-style: none;
+}
+
+li:nth-child(1) {
+    background-color: #e4d12c;
+}
+
+li:nth-child(2) {
+    background-color: #e66814;
+}
+
+li:nth-child(3) {
+    background-color: #1692b1;
 }
