--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -5,8 +5,36 @@
 
 body {
     font-family: 'Economica', sans-serif;
+    background-color: #f2f2f2;
+}
+
+
+/* HEADER */
+
+header {
+    text-align: center;
+    color: ;
+    margin: 20px 0px;
+    font-size: 1.3rem;
 }
 
 h1 {
     font-family: 'Quantico', sans-serif;
+}
+
+nav {
+    background-color: #15382a;
+    text-align: center;
+}
+
+li {
+    list-style: none;
+    display: inline-block;
+    margin: 10px 20px;
+    font-size: 1.1rem;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
