Estilização do item informações gerais e tabela

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -6,6 +6,8 @@
 body {
     font-family: 'Economica', sans-serif;
     background-color: #f2f2f2;
+    font-size: 1.2rem;
+    color: #272727;
 }
 
 
@@ -20,6 +22,7 @@ header {
 
 h1 {
     font-family: 'Quantico', sans-serif;
+    color: #b95a00;
 }
 
 nav {
@@ -37,4 +40,63 @@ li {
 a {
     text-decoration: none;
     color: white;
+}
+
+
+
+/* ARTICLE */
+/* article {
+    background-color: aqua;
+} */
+
+h2 {
+    text-align: center;
+    font-size: 1.9rem;
+    margin: 50px 0;
+    color: #964800;
+}
+
+h3 {
+    color: #15382a;
+    margin-bottom: 20px;
+    font-size: 1.7rem;
+}
+
+article > section {
+    margin: 20px 10px;
+    text-align: center;
+}
+
+.general-info p {
+    max-width: 660px;
+    text-align: left;
+    text-align: center;
+    margin: auto;
+}
+
+img {
+    border-radius: 4px;
+}
+
+.general-info img {
+    max-width: 40%;
+    margin: 30px 30px 40px 0px
+}
+
+.general-info div {
+    margin: 30px 0px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.general-info table {
+    margin: auto;
+}
+
+.general-info tr {
+    text-align: left;
+}
+
+.general-info h5 {
+    margin-bottom: 10px;
 }
