--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -45,10 +45,8 @@ a {
 
 
 /* ARTICLE */
-/* article {
-    background-color: aqua;
-} */
 
+/* SECTION INFORMAÇÕES GERAIS */
 h2 {
     text-align: center;
     font-size: 1.9rem;
@@ -79,7 +77,7 @@ img {
 }
 
 .general-info img {
-    max-width: 40%;
+    max-width: 300px;
     margin: 30px 30px 40px 0px
 }
 
@@ -99,4 +97,17 @@ img {
 
 .general-info h5 {
     margin-bottom: 10px;
+}
+
+
+/* SUPERVISÃO */
+.supervisao p {
+    display: inline-block;
+    max-width: 400px;
+    vertical-align: top;
+}
+
+.supervisao img {
+    max-width: 300px;
+    margin: 20px 10px 20px 30px;
 }
