--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -166,3 +166,23 @@ img {
 .references li:hover {
     transform: scale(1.1);
 }
+
+
+/* ASIDE */
+aside {
+    background-color: #ffebcd;
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: 600;
+    padding: 15px 0px 40px 0px;
+    color: #964800;
+}
+
+aside a {
+    color: #964800;
+    text-decoration: underline;
+}
+
+aside a:hover {
+    background-color: #f8d39b;
+}
