--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/style.css
@@ -186,3 +186,16 @@ aside a {
 aside a:hover {
     background-color: #f8d39b;
 }
+
+
+/* FOOTER */
+footer {
+    background-color: #633000;
+    padding: 20px 0px;
+    color: #f2f2f2;
+    text-align: center;
+}
+
+footer a:hover {
+    color: #f8d39b;
+}
