--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/pratica-01/style.css
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/pratica-01/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #eee;
+  background-color: rgb(238, 238, 238);
 }
 
 button {
